--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,27 @@
 version: "3"
 
 services:
-  django_blog:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  db:
+    image: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+        - POSTGRES_DB=test_db
+        - POSTGRES_USER=postgres
+
+  web:
+    build: .
     ports:
       - "8000:8000"
-    expose:
-      - 8000
     env_file:
       - .env
+    depends_on:
+      - db
+    volumes:
+      - .:/app
     command: python manage.py runserver 0.0.0.0:8000
+
+volumes:
+  postgres_data:
